// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`data modeling with empty data 1`] = `
Object {
  "PNG": Object {
    "available": true,
    "total": 0,
  },
  "_all": 0,
  "available": true,
  "browser_type": undefined,
  "csv": Object {
    "available": true,
    "total": 0,
  },
  "enabled": true,
  "last7Days": Object {
    "PNG": Object {
      "available": true,
      "total": 0,
    },
    "_all": 0,
    "csv": Object {
      "available": true,
      "total": 0,
    },
    "printable_pdf": Object {
      "app": Object {
        "dashboard": 0,
        "visualization": 0,
      },
      "available": true,
      "layout": Object {
        "preserve_layout": 0,
        "print": 0,
      },
      "total": 0,
    },
    "status": Object {
      "completed": 0,
      "failed": 0,
    },
    "status_by_app": Object {},
  },
  "lastDay": Object {
    "PNG": Object {
      "available": true,
      "total": 0,
    },
    "_all": 0,
    "csv": Object {
      "available": true,
      "total": 0,
    },
    "printable_pdf": Object {
      "app": Object {
        "dashboard": 0,
        "visualization": 0,
      },
      "available": true,
      "layout": Object {
        "preserve_layout": 0,
        "print": 0,
      },
      "total": 0,
    },
    "status": Object {
      "completed": 0,
      "failed": 0,
    },
    "status_by_app": Object {},
  },
  "printable_pdf": Object {
    "app": Object {
      "dashboard": 0,
      "visualization": 0,
    },
    "available": true,
    "layout": Object {
      "preserve_layout": 0,
      "print": 0,
    },
    "total": 0,
  },
  "status": Object {
    "completed": 0,
    "failed": 0,
  },
  "status_by_app": Object {},
}
`;

exports[`data modeling with normal looking usage data 1`] = `
Object {
  "PNG": Object {
    "available": true,
    "total": 25,
  },
  "_all": 40,
  "available": true,
  "browser_type": undefined,
  "csv": Object {
    "available": true,
    "total": 0,
  },
  "enabled": true,
  "last7Days": Object {
    "PNG": Object {
      "available": true,
      "total": 6,
    },
    "_all": 15,
    "csv": Object {
      "available": true,
      "total": 0,
    },
    "printable_pdf": Object {
      "app": Object {
        "canvas workpad": 8,
        "dashboard": 0,
        "visualization": 1,
      },
      "available": true,
      "layout": Object {
        "preserve_layout": 9,
        "print": 0,
      },
      "total": 9,
    },
    "status": Object {
      "completed": 12,
      "completed_with_warnings": 3,
      "failed": 0,
    },
    "status_by_app": Object {
      "completed": Object {
        "canvas workpad": 7,
        "dashboard": 4,
        "visualization": 1,
      },
      "completed_with_warnings": Object {
        "canvas workpad": 1,
        "dashboard": 2,
      },
    },
  },
  "lastDay": Object {
    "PNG": Object {
      "available": true,
      "total": 6,
    },
    "_all": 7,
    "csv": Object {
      "available": true,
      "total": 0,
    },
    "printable_pdf": Object {
      "app": Object {
        "dashboard": 0,
        "visualization": 1,
      },
      "available": true,
      "layout": Object {
        "preserve_layout": 1,
        "print": 0,
      },
      "total": 1,
    },
    "status": Object {
      "completed": 5,
      "completed_with_warnings": 2,
      "failed": 0,
    },
    "status_by_app": Object {
      "completed": Object {
        "dashboard": 4,
        "visualization": 1,
      },
      "completed_with_warnings": Object {
        "dashboard": 2,
      },
    },
  },
  "printable_pdf": Object {
    "app": Object {
      "canvas workpad": 10,
      "dashboard": 0,
      "visualization": 5,
    },
    "available": true,
    "layout": Object {
      "preserve_layout": 15,
      "print": 0,
    },
    "total": 15,
  },
  "status": Object {
    "completed": 34,
    "completed_with_warnings": 3,
    "failed": 3,
  },
  "status_by_app": Object {
    "completed": Object {
      "canvas workpad": 9,
      "dashboard": 4,
      "visualization": 21,
    },
    "completed_with_warnings": Object {
      "canvas workpad": 1,
      "dashboard": 2,
    },
    "failed": Object {
      "visualization": 3,
    },
  },
}
`;

exports[`data modeling with sparse data 1`] = `
Object {
  "PNG": Object {
    "available": true,
    "total": 0,
  },
  "_all": 1,
  "available": true,
  "browser_type": undefined,
  "csv": Object {
    "available": true,
    "total": 1,
  },
  "enabled": true,
  "last7Days": Object {
    "PNG": Object {
      "available": true,
      "total": 0,
    },
    "_all": 1,
    "csv": Object {
      "available": true,
      "total": 1,
    },
    "printable_pdf": Object {
      "app": Object {
        "dashboard": 0,
        "visualization": 0,
      },
      "available": true,
      "layout": Object {
        "preserve_layout": 0,
        "print": 0,
      },
      "total": 0,
    },
    "status": Object {
      "completed": 1,
      "failed": 0,
    },
    "status_by_app": Object {
      "completed": Object {},
    },
  },
  "lastDay": Object {
    "PNG": Object {
      "available": true,
      "total": 0,
    },
    "_all": 1,
    "csv": Object {
      "available": true,
      "total": 1,
    },
    "printable_pdf": Object {
      "app": Object {
        "dashboard": 0,
        "visualization": 0,
      },
      "available": true,
      "layout": Object {
        "preserve_layout": 0,
        "print": 0,
      },
      "total": 0,
    },
    "status": Object {
      "completed": 1,
      "failed": 0,
    },
    "status_by_app": Object {
      "completed": Object {},
    },
  },
  "printable_pdf": Object {
    "app": Object {
      "dashboard": 0,
      "visualization": 0,
    },
    "available": true,
    "layout": Object {
      "preserve_layout": 0,
      "print": 0,
    },
    "total": 0,
  },
  "status": Object {
    "completed": 1,
    "failed": 0,
  },
  "status_by_app": Object {
    "completed": Object {},
  },
}
`;
